remove imshow, trying to read airsim settings from api..

--- a/airsim_stereo/.vscode/settings.json
+++ b/airsim_stereo/.vscode/settings.json
@@ -56,6 +56,9 @@
         "thread": "cpp",
         "cinttypes": "cpp",
         "typeinfo": "cpp",
-        "bit": "cpp"
+        "bit": "cpp",
+        "list": "cpp",
+        "typeindex": "cpp",
+        "variant": "cpp"
     }
 }
