launch file fixed

--- a/airsim_stereo/.vscode/settings.json
+++ b/airsim_stereo/.vscode/settings.json
@@ -59,6 +59,7 @@
         "bit": "cpp",
         "list": "cpp",
         "typeindex": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "*.ipp": "cpp"
     }
 }
